--- a/dia_1.html
+++ b/dia_1.html
@@ -355,14 +355,14 @@ aux</code></pre>
 rep(1:5, length.out=7))</code></pre>
 <pre><code>## [1] 1 2 3 4 5 1 2</code></pre>
 <pre class="r"><code>print(rnorm(10))</code></pre>
-<pre><code>##  [1]  0.53851596 -1.20064798 -0.32165731  0.55641239  0.07659084  1.37260768
-##  [7]  1.57277276 -1.14326310 -1.54240571  0.89037750</code></pre>
+<pre><code>##  [1]  0.790352431 -0.817052454  0.099652961  0.616244786 -1.103870969
+##  [6] -0.009319053  0.405349012 -0.423565060  0.276970107  0.083757561</code></pre>
 <pre class="r"><code>print(rnorm(10, mean=0, sd=1))</code></pre>
-<pre><code>##  [1] -1.6577477  0.8118543 -0.5772806  0.3951632  0.5600860 -0.5839056
-##  [7]  2.7003655 -0.3497470  0.9009809  0.4143129</code></pre>
+<pre><code>##  [1]  0.46990428  0.54337264  1.35753225  2.11202269  1.10639439  0.03583994
+##  [7] -1.62370691  1.48190247  1.02439976  0.62579548</code></pre>
 <pre class="r"><code>print(rt(10, df = 100))</code></pre>
-<pre><code>##  [1]  0.46126094  1.40764374 -1.44620341  0.45610708 -0.21766768  1.52596612
-##  [7] -0.93208248 -0.38880253 -0.02323968  1.04081131</code></pre>
+<pre><code>##  [1]  1.1863518 -0.1781131  0.3891720 -0.4592467 -0.9261298  0.1791368
+##  [7] -0.3588856  0.3736504 -0.3783603 -0.4345568</code></pre>
 </div>
 <div id="indexação" class="section level1">
 <h1>Indexação</h1>
@@ -372,26 +372,26 @@ frutas[idx]</code></pre>
 <pre><code>## [1] &quot;banana&quot;   &quot;maca&quot;     &quot;melancia&quot;</code></pre>
 <pre class="r"><code>frutas = rnorm(100, mean=0, sd=1)
 frutas[frutas &gt; 0]</code></pre>
-<pre><code>##  [1] 0.87302181 0.59059583 0.12850763 0.41605899 0.97267156 0.21379928
-##  [7] 1.50325799 0.27297900 0.66128093 0.97622655 0.51428888 0.21342584
-## [13] 0.42802221 0.82731694 0.44021902 0.28384401 0.32051034 0.04070299
-## [19] 0.26653808 0.14418773 0.90671905 0.05956067 0.75711785 0.74797970
-## [25] 0.60307510 0.08145646 1.52217294 0.85804210 0.02455291 1.12990278
-## [31] 0.69912294 0.36167206 0.80930538 0.55397968 0.73412354 0.03700877
-## [37] 1.23431038 1.00490582 0.52577889 1.33939491 1.74858599 1.02685375
-## [43] 0.64403998 0.61240887 1.14556776 1.72786191 0.09930900 1.98609175
-## [49] 0.61248738 0.22705182 0.80287405 0.37665044</code></pre>
+<pre><code>##  [1] 0.90604689 0.35154516 1.45944318 1.10832433 0.35483937 1.16095449
+##  [7] 1.77170725 1.15364726 0.87465336 1.13730354 0.91741904 0.03824902
+## [13] 0.68939816 0.03995000 0.37883051 0.26229398 0.77260794 1.14807785
+## [19] 0.05678949 0.29998721 0.06043922 0.59705611 2.29222879 0.84280146
+## [25] 1.66369976 0.08733844 0.34994463 2.36274017 1.06351365 1.23262679
+## [31] 0.36556430 1.53397570 0.71332351 0.48074382 0.02378465 0.74718828
+## [37] 1.35452180 1.25641198 0.08039449 0.95501012 0.69806899 2.00288283
+## [43] 0.71568630 0.60377326</code></pre>
 <pre class="r"><code>frutas[frutas &lt; -0.5 | frutas &gt; 0.5]</code></pre>
-<pre><code>##  [1]  0.8730218  0.5905958 -0.9447699 -1.6731450  0.9726716 -0.7400478
-##  [7] -1.2990472  1.5032580 -0.5339752  0.6612809  0.9762266 -1.4963172
-## [13]  0.5142889 -0.7937207  0.8273169 -1.5070847 -0.9752318 -0.8961655
-## [19] -0.5866602  0.9067191  0.7571179  0.7479797  0.6030751 -1.2025695
-## [25]  1.5221729 -0.9183130  0.8580421 -0.7559547 -1.2642658  1.1299028
-## [31]  0.6991229 -1.3863617 -0.8229039  0.8093054  0.5539797 -1.5715679
-## [37]  0.7341235  1.2343104 -0.5471122  1.0049058  0.5257789  1.3393949
-## [43]  1.7485860  1.0268537 -0.6347600  0.6440400  0.6124089 -0.5076004
-## [49] -1.1821621  1.1455678  1.7278619 -0.5091173 -1.6659996 -0.5519112
-## [55] -1.8087950  1.9860918  0.6124874  0.8028741</code></pre>
+<pre><code>##  [1] -1.0633477 -1.0990500  0.9060469 -1.4174682 -0.6679239  1.4594432
+##  [7]  1.1083243 -0.5721362  1.1609545 -2.0369460  1.7717073 -1.5786667
+## [13] -0.5057733 -0.5389669 -1.8660821 -0.5226823 -2.0197055 -0.7321978
+## [19] -0.5575541  1.1536473  0.8746534  1.1373035 -0.7872308  0.9174190
+## [25]  0.6893982 -1.3745897 -0.8478133  0.7726079 -1.6690055 -0.8094335
+## [31]  1.1480778 -0.8194415 -0.8507841  0.5970561 -1.3776438  2.2922288
+## [37]  0.8428015  1.6636998 -0.8653381 -0.9423643  2.3627402  1.0635137
+## [43]  1.2326268 -0.8469346  1.5339757  0.7133235  0.7471883  1.3545218
+## [49]  1.2564120 -0.6412739 -1.4066201 -1.2414904 -1.6285209 -2.6383696
+## [55]  0.9550101 -0.5799989 -1.7354690  0.6980690  2.0028828  0.7156863
+## [61]  0.6037733 -0.7968768</code></pre>
 <pre class="r"><code>idh = c(0.7, 0.8, 0.7, 0.8, 0.9)
 names(idh) = c(&#39;BR&#39;, &#39;CH&#39;, &#39;EUA&#39;, &#39;FR&#39;, &#39;AL&#39;)
 idh</code></pre>
@@ -758,47 +758,47 @@ iris</code></pre>
 <pre class="r"><code>x = sample(seq(-10, 10, 0.1), 10)
 # soma
 sum(x)</code></pre>
-<pre><code>## [1] 11.6</code></pre>
+<pre><code>## [1] 18.6</code></pre>
 <pre class="r"><code>max(x)</code></pre>
-<pre><code>## [1] 7</code></pre>
+<pre><code>## [1] 9.5</code></pre>
 <pre class="r"><code>min(x)</code></pre>
-<pre><code>## [1] -8.3</code></pre>
+<pre><code>## [1] -8.8</code></pre>
 <pre class="r"><code>which.max(x)</code></pre>
-<pre><code>## [1] 2</code></pre>
+<pre><code>## [1] 5</code></pre>
 <pre class="r"><code>which.min(x)</code></pre>
-<pre><code>## [1] 4</code></pre>
+<pre><code>## [1] 2</code></pre>
 <pre class="r"><code>range(x)</code></pre>
-<pre><code>## [1] -8.3  7.0</code></pre>
+<pre><code>## [1] -8.8  9.5</code></pre>
 <pre class="r"><code>length(x)</code></pre>
 <pre><code>## [1] 10</code></pre>
 <pre class="r"><code>mean(x)</code></pre>
-<pre><code>## [1] 1.16</code></pre>
+<pre><code>## [1] 1.86</code></pre>
 <pre class="r"><code>median(x)</code></pre>
-<pre><code>## [1] 2.55</code></pre>
+<pre><code>## [1] 1.95</code></pre>
 <pre class="r"><code>sd(x)</code></pre>
-<pre><code>## [1] 5.756774</code></pre>
+<pre><code>## [1] 5.763911</code></pre>
 <pre class="r"><code>var(x)</code></pre>
-<pre><code>## [1] 33.14044</code></pre>
+<pre><code>## [1] 33.22267</code></pre>
 <pre class="r"><code>quantile(x)</code></pre>
 <pre><code>##     0%    25%    50%    75%   100% 
-## -8.300 -3.925  2.550  5.975  7.000</code></pre>
+## -8.800 -0.975  1.950  6.475  9.500</code></pre>
 <pre class="r"><code># normalização com media 0 e desvio 1
 scale(x)</code></pre>
-<pre><code>##              [,1]
-##  [1,]  0.37173599
-##  [2,]  1.01445709
-##  [3,]  0.04169002
-##  [4,] -1.64328152
-##  [5,] -1.24375219
-##  [6,]  0.11117338
-##  [7,] -1.19163967
-##  [8,]  0.87549037
-##  [9,]  0.84074869
-## [10,]  0.82337785
+<pre><code>##             [,1]
+##  [1,] -1.1554655
+##  [2,] -1.8494388
+##  [3,]  0.8917557
+##  [4,]  0.1457344
+##  [5,]  1.3254890
+##  [6,] -0.1665536
+##  [7,]  0.5274197
+##  [8,]  0.9958517
+##  [9,] -0.1145056
+## [10,] -0.6002869
 ## attr(,&quot;scaled:center&quot;)
-## [1] 1.16
+## [1] 1.86
 ## attr(,&quot;scaled:scale&quot;)
-## [1] 5.756774</code></pre>
+## [1] 5.763911</code></pre>
 <pre class="r"><code>x = c(10, 9, 8, 7, 6, 5, 4, 3, 2, 1)
 y = c(1, 2, 3)
 # ordenar o vetor
@@ -837,13 +837,13 @@ setdiff(x, y)</code></pre>
 y = matrix(sample(seq(-10, 10, 0.1), 9), nrow=3, ncol=3)
 # diaginal principal
 diag(x)</code></pre>
-<pre><code>## [1] -2.2  2.9 -4.6</code></pre>
+<pre><code>## [1]  7.3  6.6 -1.2</code></pre>
 <pre class="r"><code># transposta
 t(x)</code></pre>
 <pre><code>##      [,1] [,2] [,3]
-## [1,] -2.2  4.5 -0.1
-## [2,] -9.4  2.9 -0.2
-## [3,]  4.6 -4.2 -4.6</code></pre>
+## [1,]  7.3 -3.6  0.4
+## [2,]  7.0  6.6 -5.0
+## [3,]  3.8  9.6 -1.2</code></pre>
 <pre class="r"><code># numero de linhas
 nrow(x)</code></pre>
 <pre><code>## [1] 3</code></pre>
@@ -852,13 +852,13 @@ ncol(x)</code></pre>
 <pre><code>## [1] 3</code></pre>
 <pre class="r"><code># pruduto entre dois vetores
 x %*% y</code></pre>
-<pre><code>##        [,1]  [,2]   [,3]
-## [1,] -65.52 -3.96 -44.66
-## [2,]  25.41 -8.88  -4.53
-## [3,] -40.78 19.95  -2.59</code></pre>
+<pre><code>##        [,1]   [,2]  [,3]
+## [1,]  32.87  46.73 32.03
+## [2,] 157.44 116.58 -6.96
+## [3,] -55.20 -39.06 19.76</code></pre>
 <pre class="r"><code># determinante 
 det(x)</code></pre>
-<pre><code>## [1] -170.138</code></pre>
+<pre><code>## [1] 347.592</code></pre>
 </div>
 
 
